fix: overflow

--- a/src/styles/sub-modules/_team.scss
+++ b/src/styles/sub-modules/_team.scss
@@ -6,9 +6,10 @@
       @extend %font-bold;
 
       display: inline-block;
-      max-width: 110px;
+      max-width: 105px;
       width: 100%;
-      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
       text-transform: capitalize;
     }
   }
